[package]
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
categories = ["external-ffi-bindings"]
description = "QuickJS bindings for rquickjs"
edition = "2021"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]
license = "MIT"
name = "rquickjs-sys"
readme = "README.md"
repository = "https://github.com/DelSkayn/rquickjs.git"
version = "0.9.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1"

[build-dependencies.bindgen-rs]
optional = true
package = "bindgen"
version = "0.69"

[build-dependencies.pretty_env_logger]
optional = true
version = "0.5"

[features]
bindgen = ["bindgen-rs"]

# Debug logging
logging = ["pretty_env_logger"]
# Special case for updating bundled bindings
update-bindings = ["bindgen"]

# Enable QuickJS dumps
dump-atoms = []
dump-bytecode = []
dump-free = []
dump-gc = []
dump-gc-free = []
dump-leaks = []
dump-mem = []
dump-module-resolve = []
dump-objects = []
dump-promise = []
dump-read-object = []
dump-shapes = []
